Added basic HTML structure

--- a/index.html
+++ b/index.html
@@ -6,6 +6,36 @@
     <title>Niila Vesterinen</title>
     <link rel="stylesheet" href="style.css" />
     <script src="main.js"></script>
+    <link rel="shortcut icon" href="Media/favicon.png" type="image/x-icon" />
   </head>
-  <body></body>
+  <body>
+    <a class="nav-arrow"
+      ><img
+        src="Media/Icons/arrow-up-light.svg"
+        alt="Arrow for navigating through my page."
+    /></a>
+    <section id="hero"></section>
+    <nav>
+      <a href=""></a>
+      <a href=""></a>
+      <a href=""></a>
+      <a href=""></a>
+      <a href=""></a>
+    </nav>
+    <main>
+      <section id="front-end"></section>
+      <section id="kuvaus">
+        <article></article>
+        <article></article>
+      </section>
+      <section id="tyokokemus"></section>
+      <section id="yhteystiedot"></section>
+      <section id="mina">
+        <article></article>
+        <article></article>
+        <article></article>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
