--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Niila Vesterinen</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="main.js"></script>
+    <script defer src="main.js"></script>
     <link rel="shortcut icon" href="Media/favicon.png" type="image/x-icon" />
   </head>
   <body>
-    <a class="nav-arrow"
+    <a class="arrow-nav"
       ><img
         src="Media/Icons/arrow-up-light.svg"
         alt="Arrow for navigating through my page."
+        id="arrow-nav-icon"
     /></a>
     <section id="hero">
       <h1>Niila Vesterinen</h1>
