Simplified theme code

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
   <body>
     <a class="arrow-nav"
       ><img
-        src="Media/Icons/arrow-up-light.svg"
+        src="Media/Icons/arrow-down.svg"
         alt="Arrow for navigating through my page."
         id="arrow-nav-icon"
+        class="icon"
     /></a>
     <section id="hero">
       <h1>Niila Vesterinen</h1>
@@ -27,23 +28,23 @@
       <h2 class="visually-hidden">NAV</h2>
       <a href="#front-end"
         ><h3>Front-End Development</h3>
-        <img src="Media/Icons/code-light.svg" alt=""
+        <img class="icon" src="Media/Icons/code.svg" alt=""
       /></a>
       <a href="#kuvaus"
         ><h3>Valo- ja videokuvaus</h3>
-        <img src="Media/Icons/camera-light.svg" alt=""
+        <img class="icon" src="Media/Icons/camera.svg" alt=""
       /></a>
       <a href="#tyokokemus"
         ><h3>Työkokemus</h3>
-        <img src="Media/Icons/cv-light.svg" alt=""
+        <img class="icon" src="Media/Icons/cv.svg" alt=""
       /></a>
       <a href="#yhteystiedot"
         ><h3>Yhteystiedot</h3>
-        <img src="Media/Icons/contact-light.svg" alt=""
+        <img class="icon" src="Media/Icons/contact.svg" alt=""
       /></a>
       <a href="#mina"
         ><h3>Minä</h3>
-        <img src="Media/Icons/me-light.svg" alt=""
+        <img class="icon" src="Media/Icons/me.svg" alt=""
       /></a>
     </nav>
     <main>
