Footer + section css

--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
     <link rel="shortcut icon" href="Media/favicon.png" type="image/x-icon" />
   </head>
   <body>
-    <a class="arrow-nav"
+    <a href="" class="arrow-nav"
       ><img
         src="Media/Icons/arrow-down.svg"
         alt="Arrow for navigating through my page."
         id="arrow-nav-icon"
         class="icon"
     /></a>
-    <section id="hero">
+    <section class="h-min-100" id="hero">
       <h1>Niila Vesterinen</h1>
       <p class="hero-p">Joku random lukiolainen, <br />toistaiseksi.</p>
       <img
+        class="oma-kuva"
         src="Media/hero-photo.png"
         alt="Random kuva, koska ei oo kuvaa musta."
       />
     </section>
-    <nav>
+    <nav class="h-min-100" id="nav">
       <h2 class="visually-hidden">NAV</h2>
       <a href="#front-end"
         ><h3>Front-End Development</h3>
@@ -102,7 +103,7 @@
           <div class="videogalleria"></div>
         </article>
       </section>
-      <section id="tyokokemus">
+      <section class="h-min-100" id="tyokokemus">
         <div class="heading"><h2>Työkokemus</h2></div>
         <p>CV yhtä tyhjä kuin tämä osio.</p>
         <p>Peruskoulu käyty 9,5 keskiarvolla. (Lukuaineet 9,833)</p>
@@ -139,7 +140,7 @@
           </p>
         </article>
         <article>
-          <img src="Media/favicon.png" alt="Kuva minusta." />
+          <img class="oma-kuva" src="Media/favicon.png" alt="Kuva minusta." />
           <h3 class="visually-hidden">Vapaa-aika</h3>
           <div class="info">
             <p>
@@ -436,11 +437,11 @@
         Niila Vesterinen Niila Vesterinen Niila Vesterinen Niila Vesterinen
         Niila Vesterinen Niila
       </p>
-      <div>
-        <p>Kiitos nettisivullani vierailusta.</p>
-        <p>Tervetuloa uudelleen.</p>
+      <div class="thanks">
+        <p class="no-animation">Kiitos nettisivullani vierailusta.</p>
+        <p class="no-animation">Tervetuloa uudelleen.</p>
       </div>
-      <p>2023&copy;</p>
+      <p class="copyright no-animation">2023&copy;</p>
     </footer>
   </body>
 </html>
