--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         id="arrow-nav-icon"
         class="icon"
     /></a>
-    <section class="h-min-100" id="hero">
+    <div class="h-min-100" id="hero">
       <h1>Niila Vesterinen</h1>
       <p class="hero-p">Joku random lukiolainen, <br />toistaiseksi.</p>
       <img
@@ -24,7 +24,7 @@
         src="Media/hero-photo.png"
         alt="Random kuva, koska ei oo kuvaa musta."
       />
-    </section>
+    </div>
     <nav class="h-min-100" id="nav">
       <h2 class="visually-hidden">NAV</h2>
       <a href="#front-end"
@@ -51,133 +51,146 @@
     <main>
       <section id="front-end">
         <div class="heading"><h2>Front-End Development</h2></div>
-        <h3>Taidot</h3>
-        <p>
-          Olen itse oppinut HTML, CSS ja JavaScript harrastelija. Lisäksi
-          suunnittelen sivuni itse käyttäen Figmaa ja teen iconit Inkscapella.
-        </p>
-        <h3>Kotisivuni</h3>
-        <p>
-          Tämä sivusto kuvaa parhaiten taitojani nettisivujen suunnittelijana ja
-          kehittäjänä. Lue lisää sivun kehityksestä.
-        </p>
-        <h3><a href="Arkisto#naukuvat-uutiset">Naukuvat Uutiset!</a></h3>
-        <p>
-          Kyseessä on ensimmäinen itse tekemäni nettisivusto. Sivuston tekemisen
-          aikaan en tiennyt mitä tein, joten en suosittele lähdekoodin
-          tarkastelemista.
-        </p>
-        <h3>Omia Projektejani</h3>
-        <p>
-          Olen tehnyt monia nettisivuja ja muita projekteja. Löydät ne
-          <a href="Arkisto/">Arkistostani</a>.
-        </p>
+        <div class="content">
+          <h3 class="tmar-8">Taidot</h3>
+          <p>
+            Olen itse oppinut HTML, CSS ja JavaScript harrastelija. Lisäksi
+            suunnittelen sivuni itse käyttäen Figmaa ja teen iconit Inkscapella.
+          </p>
+          <h3>Kotisivuni</h3>
+          <p>
+            Tämä sivusto kuvaa parhaiten taitojani nettisivujen suunnittelijana
+            ja kehittäjänä. Lue lisää sivun kehityksestä.
+          </p>
+          <h3><a href="Arkisto#naukuvat-uutiset">Naukuvat Uutiset!</a></h3>
+          <p>
+            Kyseessä on ensimmäinen itse tekemäni nettisivusto. Sivuston
+            tekemisen aikaan en tiennyt mitä tein, joten en suosittele
+            lähdekoodin tarkastelemista.
+          </p>
+          <h3>Omia Projektejani</h3>
+          <p>
+            Olen tehnyt monia nettisivuja ja muita projekteja. Löydät ne
+            <a href="Arkisto/">Arkistostani</a>.
+          </p>
+        </div>
       </section>
       <section id="kuvaus">
         <div class="heading"><h2>Valo- ja videokuvaus</h2></div>
-        <article>
-          <h3>Valokuvaus</h3>
-          <p>Olen valokuvannut kamerallani vuodesta 2019 lähtien.</p>
-          <p>
-            Kuvat otan Canon EOS 400D järjestelmäkamerallani sekä Samsung Galaxy
-            A50 puhelimellani. Ja editoin niitä Adobe Photoshop Expressillä.
-          </p>
-          <p>
-            Alla on joitain lempi kuviani, halutessasi voit seurata minua myös
-            <a target="_blank" href="#yhteystiedot">Instagramissa</a>!
-          </p>
-          <div class="kuvagalleria"></div>
-        </article>
-        <article>
-          <h3>Videokuvaus</h3>
-          <p>Olen tehnyt myös videoita vuodesta 2019 lähtien.</p>
-          <p>
-            Kuvaan videot puhelimellani sekä Panasonic Lumix DMC-FZ28
-            kamerallani ja editoimiseen olen käyttänyt Adobe Rushia, Windows
-            videoeditoria sekä Clipchampia.
-          </p>
-          <p>
-            Alla on video, jonka olen tehnyt Kotkasta. Pääset siitä myös YouTube
-            kanavalleni.
-          </p>
-          <div class="videogalleria"></div>
-        </article>
+        <div class="content">
+          <article>
+            <h3 class="tmar-8">Valokuvaus</h3>
+            <p>Olen valokuvannut kamerallani vuodesta 2019 lähtien.</p>
+            <p>
+              Kuvat otan Canon EOS 400D järjestelmäkamerallani sekä Samsung
+              Galaxy A50 puhelimellani. Ja editoin niitä Adobe Photoshop
+              Expressillä.
+            </p>
+            <p>
+              Alla on joitain lempi kuviani, halutessasi voit seurata minua myös
+              <a target="_blank" href="#yhteystiedot">Instagramissa</a>!
+            </p>
+            <div class="kuvagalleria"></div>
+          </article>
+          <article>
+            <h3>Videokuvaus</h3>
+            <p>Olen tehnyt myös videoita vuodesta 2019 lähtien.</p>
+            <p>
+              Kuvaan videot puhelimellani sekä Panasonic Lumix DMC-FZ28
+              kamerallani ja editoimiseen olen käyttänyt Adobe Rushia, Windows
+              videoeditoria sekä Clipchampia.
+            </p>
+            <p>
+              Alla on video, jonka olen tehnyt Kotkasta. Pääset siitä myös
+              YouTube kanavalleni.
+            </p>
+            <div class="videogalleria"></div>
+          </article>
+        </div>
       </section>
       <section class="h-min-100" id="tyokokemus">
         <div class="heading"><h2>Työkokemus</h2></div>
-        <p>CV yhtä tyhjä kuin tämä osio.</p>
-        <p>Peruskoulu käyty 9,5 keskiarvolla. (Lukuaineet 9,833)</p>
-        <p>Nyt opiskelen lukiossa.</p>
+        <div class="content">
+          <p>CV yhtä tyhjä kuin tämä osio.</p>
+          <p>Peruskoulu käyty 9,5 keskiarvolla. (Lukuaineet 9,833)</p>
+          <p>Nyt opiskelen lukiossa.</p>
+        </div>
       </section>
       <section id="yhteystiedot">
         <div class="heading"><h2>Yhteystiedot</h2></div>
-        <a href="mailto:vesterinencontact@gmail.com">Email</a>
-        <a href="https://github.com/Nibazzador">GitHub</a>
-        <a href="https://www.instagram.com/vesterinen.photography/"
-          >Instagram</a
-        >
+        <div class="content">
+          <a href="mailto:vesterinencontact@gmail.com">Email</a>
+          <a href="https://github.com/Nibazzador">GitHub</a>
+          <a href="https://www.instagram.com/vesterinen.photography/"
+            >Instagram</a
+          >
+        </div>
       </section>
       <section id="mina">
         <div class="heading"><h2>Minä</h2></div>
-        <article>
-          <h3 class="visually-hidden">Perustietoa</h3>
-          <p>
-            Kaiken tuon taidoillani flexauksen yrittämisen jälkeen saat kuulla
-            ihan vain minusta:
-          </p>
-          <p>Olen 16-vuotias poika Keski-Suomesta.</p>
-          <p>
-            Pidän luonnosta. Välillä nukun ulkona riippumatossa ilman mitään
-            hyvää syytä.
-          </p>
-          <p>
-            Välillä pyöräilen pitkiä lenkkejä Jyväskylään (60-80km), ihan vaan
-            läpällä.
-          </p>
-          <p>
-            Vaikka pidän luonnosta, pidän myös kaupungeista ja niiden
-            tunnelmasta.
-          </p>
-        </article>
-        <article>
-          <img class="oma-kuva" src="Media/favicon.png" alt="Kuva minusta." />
-          <h3 class="visually-hidden">Vapaa-aika</h3>
-          <div class="info">
+        <div class="content">
+          <article>
+            <h3 class="visually-hidden">Perustietoa</h3>
             <p>
-              Kuvaamisen ja nettisivujen tekemisen lisäksi teen vapaa-ajallani
-              muun muassa näitä asioita:
+              Kaiken tuon taidoillani flexauksen yrittämisen jälkeen saat kuulla
+              ihan vain minusta:
             </p>
-            <p>Soitan sähkökitaraani ja kuuntelen musiikkia.</p>
+            <p>Olen 16-vuotias poika Keski-Suomesta.</p>
             <p>
-              Pelaan shakkia chess.com palvelussa ja opiskelen Saksaa
-              Duolingossa.
+              Pidän luonnosta. Välillä nukun ulkona riippumatossa ilman mitään
+              hyvää syytä.
             </p>
             <p>
-              Pelaan ystävieni kanssa CS:GO videopeliä ja puhun kaikkea turhaa
-              Discordissa.
+              Välillä pyöräilen pitkiä lenkkejä Jyväskylään (60-80km), ihan vaan
+              läpällä.
             </p>
-            <p>Nukun lattialla.</p>
-          </div>
-        </article>
-        <article>
-          <h3 class="visually-hidden">Mielipiteitäni</h3>
-          <p>
-            Seuraavaksi tärkeitä mielipiteitäni, joista ainakin jokin saa sinut
-            olemaan erimieltä.
-          </p>
-          <p>Juusto tulee kinkun päälle.</p>
-          <p>
-            Hesburger > McDonalds > Burger King. (Pizza Buffa kylläkin paras.)
-          </p>
-          <p>
-            Oikeastaan kaikki pikaruokapaikat huonoja. Jos haluaa jotain mättöä,
-            pitää mennä oikealle grillille.
-          </p>
-          <p>
-            Sosiaaliset mediat ajantuhlausta ja niistä on paljon enemmän
-            haittaa, kuin hyötyä. (Varsinkin TikTok ja Instagram)
-          </p>
-        </article>
+            <p>
+              Vaikka pidän luonnosta, pidän myös kaupungeista ja niiden
+              tunnelmasta.
+            </p>
+          </article>
+          <div class="divider"></div>
+          <article>
+            <img class="oma-kuva" src="Media/favicon.png" alt="Kuva minusta." />
+            <h3 class="visually-hidden">Vapaa-aika</h3>
+            <div class="info">
+              <p>
+                Kuvaamisen ja nettisivujen tekemisen lisäksi teen vapaa-ajallani
+                muun muassa näitä asioita:
+              </p>
+              <p>Soitan sähkökitaraani ja kuuntelen musiikkia.</p>
+              <p>
+                Pelaan shakkia chess.com palvelussa ja opiskelen Saksaa
+                Duolingossa.
+              </p>
+              <p>
+                Pelaan ystävieni kanssa CS:GO videopeliä ja puhun kaikkea turhaa
+                Discordissa.
+              </p>
+              <p>Nukun lattialla.</p>
+            </div>
+          </article>
+          <div class="divider"></div>
+          <article>
+            <h3 class="visually-hidden">Mielipiteitäni</h3>
+            <p>
+              Seuraavaksi tärkeitä mielipiteitäni, joista ainakin jokin saa
+              sinut olemaan erimieltä.
+            </p>
+            <p>Juusto tulee kinkun päälle.</p>
+            <p>
+              Hesburger > McDonalds > Burger King. (Pizza Buffa kylläkin paras.)
+            </p>
+            <p>
+              Oikeastaan kaikki pikaruokapaikat huonoja. Jos haluaa jotain
+              mättöä, pitää mennä oikealle grillille.
+            </p>
+            <p>
+              Sosiaaliset mediat ajantuhlausta ja niistä on paljon enemmän
+              haittaa, kuin hyötyä. (Varsinkin TikTok ja Instagram)
+            </p>
+          </article>
+        </div>
       </section>
     </main>
     <footer id="footer">
