Section bgs and nav cards on computer

--- a/index.html
+++ b/index.html
@@ -20,37 +20,39 @@
       <h1>Niila Vesterinen</h1>
       <p class="hero-p">Joku random lukiolainen, <br />toistaiseksi.</p>
       <img
-        class="oma-kuva"
+        class="hero-kuva"
         src="Media/hero-photo.png"
-        alt="Random kuva, koska ei oo kuvaa musta."
+        alt="Random kuva, koska ei oo kuvaa musta xD"
       />
     </div>
-    <nav class="h-min-100" id="nav">
+    <nav id="nav">
       <h2 class="visually-hidden">NAV</h2>
-      <a href="#front-end"
-        ><h3>Front-End Development</h3>
-        <img class="icon" src="Media/Icons/code.svg" alt=""
-      /></a>
-      <a href="#kuvaus"
-        ><h3>Valo- ja videokuvaus</h3>
-        <img class="icon" src="Media/Icons/camera.svg" alt=""
-      /></a>
-      <a href="#tyokokemus"
-        ><h3>Työkokemus</h3>
-        <img class="icon" src="Media/Icons/cv.svg" alt=""
-      /></a>
-      <a href="#yhteystiedot"
-        ><h3>Yhteystiedot</h3>
-        <img class="icon" src="Media/Icons/contact.svg" alt=""
-      /></a>
-      <a href="#mina"
-        ><h3>Minä</h3>
-        <img class="icon" src="Media/Icons/me.svg" alt=""
-      /></a>
+      <div class="nav-links">
+        <a href="#front-end"
+          ><h3>Front-End Development</h3>
+          <img class="icon" src="Media/Icons/code.svg" alt=""
+        /></a>
+        <a href="#kuvaus"
+          ><h3>Valo- ja videokuvaus</h3>
+          <img class="icon" src="Media/Icons/camera.svg" alt=""
+        /></a>
+        <a href="#tyokokemus"
+          ><h3>Työkokemus</h3>
+          <img class="icon" src="Media/Icons/cv.svg" alt=""
+        /></a>
+        <a href="#yhteystiedot"
+          ><h3>Yhteystiedot</h3>
+          <img class="icon" src="Media/Icons/contact.svg" alt=""
+        /></a>
+        <a href="#mina"
+          ><h3>Minä</h3>
+          <img class="icon" src="Media/Icons/me.svg" alt=""
+        /></a>
+      </div>
     </nav>
     <main>
       <section id="front-end">
-        <div class="heading"><h2>Front-End Development</h2></div>
+        <div class="heading hd1"><h2>Front-End Development</h2></div>
         <div class="content">
           <h3 class="tmar-8">Taidot</h3>
           <p>
@@ -76,7 +78,7 @@
         </div>
       </section>
       <section id="kuvaus">
-        <div class="heading"><h2>Valo- ja videokuvaus</h2></div>
+        <div class="heading hd2"><h2>Valo- ja videokuvaus</h2></div>
         <div class="content">
           <article>
             <h3 class="tmar-8">Valokuvaus</h3>
@@ -109,7 +111,7 @@
         </div>
       </section>
       <section class="h-min-100" id="tyokokemus">
-        <div class="heading"><h2>Työkokemus</h2></div>
+        <div class="heading hd3"><h2>Työkokemus</h2></div>
         <div class="content">
           <p>CV yhtä tyhjä kuin tämä osio.</p>
           <p>Peruskoulu käyty 9,5 keskiarvolla. (Lukuaineet 9,833)</p>
@@ -117,7 +119,7 @@
         </div>
       </section>
       <section id="yhteystiedot">
-        <div class="heading"><h2>Yhteystiedot</h2></div>
+        <div class="heading hd4"><h2>Yhteystiedot</h2></div>
         <div class="content">
           <a href="mailto:vesterinencontact@gmail.com">Email</a>
           <a href="https://github.com/Nibazzador">GitHub</a>
@@ -127,7 +129,7 @@
         </div>
       </section>
       <section id="mina">
-        <div class="heading"><h2>Minä</h2></div>
+        <div class="heading hd5"><h2>Minä</h2></div>
         <div class="content">
           <article>
             <h3 class="visually-hidden">Perustietoa</h3>
