phone version ready, I think?

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <section class="h-min-100" id="tyokokemus">
         <div class="heading hd3"><h2>Työkokemus</h2></div>
         <div class="content">
-          <p>CV yhtä tyhjä kuin tämä osio.</p>
+          <p class="tmar-8">CV yhtä tyhjä kuin tämä osio.</p>
           <p>Peruskoulu käyty 9,5 keskiarvolla. (Lukuaineet 9,833)</p>
           <p>Nyt opiskelen lukiossa.</p>
         </div>
@@ -121,11 +121,15 @@
       <section id="yhteystiedot">
         <div class="heading hd4"><h2>Yhteystiedot</h2></div>
         <div class="content">
-          <a href="mailto:vesterinencontact@gmail.com">Email</a>
-          <a href="https://github.com/Nibazzador">GitHub</a>
-          <a href="https://www.instagram.com/vesterinen.photography/"
-            >Instagram</a
-          >
+          <p class="tmar-8">
+            <a href="mailto:vesterinencontact@gmail.com">Email</a>
+          </p>
+          <p><a href="https://github.com/Nibazzador">GitHub</a></p>
+          <p>
+            <a href="https://www.instagram.com/vesterinen.photography/"
+              >Instagram</a
+            >
+          </p>
         </div>
       </section>
       <section id="mina">
@@ -133,7 +137,7 @@
         <div class="content">
           <article>
             <h3 class="visually-hidden">Perustietoa</h3>
-            <p>
+            <p class="tmar-8">
               Kaiken tuon taidoillani flexauksen yrittämisen jälkeen saat kuulla
               ihan vain minusta:
             </p>
@@ -152,7 +156,7 @@
             </p>
           </article>
           <div class="divider"></div>
-          <article>
+          <article class="mina-flex">
             <img class="oma-kuva" src="Media/favicon.png" alt="Kuva minusta." />
             <h3 class="visually-hidden">Vapaa-aika</h3>
             <div class="info">
