Font sizes responsive and hero photo hides if overlaps text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1>Niila Vesterinen</h1>
       <p class="hero-p">Joku random lukiolainen, <br />toistaiseksi.</p>
       <img
-        class="hero-kuva"
+        class="hero-photo"
         src="Media/hero-photo.png"
         alt="Random kuva, koska ei oo kuvaa musta xD"
       />
