--- a/index.html
+++ b/index.html
@@ -64,16 +64,20 @@
             Tämä sivusto kuvaa parhaiten taitojani nettisivujen suunnittelijana
             ja kehittäjänä. Lue lisää sivun kehityksestä.
           </p>
-          <h3><a href="Arkisto#naukuvat-uutiset">Naukuvat Uutiset!</a></h3>
+          <h3>
+            <a target="_blank" href="Arkisto/NaukuvatUutiset.github.io/"
+              >Naukuvat Uutiset!</a
+            >
+          </h3>
           <p>
             Kyseessä on ensimmäinen itse tekemäni nettisivusto. Sivuston
             tekemisen aikaan en tiennyt mitä tein, joten en suosittele
             lähdekoodin tarkastelemista.
           </p>
-          <h3>Omia Projektejani</h3>
+          <h3><a target="_blank" href="Arkisto/">Arkisto</a></h3>
           <p>
             Olen tehnyt monia nettisivuja ja muita projekteja. Löydät ne
-            <a href="Arkisto/">Arkistostani</a>.
+            <a target="_blank" href="Arkisto/">Arkistostani</a>.
           </p>
         </div>
       </section>
