Improved arrow nav

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="Media/favicon.png" type="image/x-icon" />
   </head>
   <body>
-    <a href="" class="arrow-nav"
+    <a href="#nav" class="arrow-nav"
       ><img
         src="Media/Icons/arrow-down.svg"
         alt="Arrow for navigating through my page."
