--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             ja kehittäjänä. Lue lisää sivun kehityksestä.
           </p>
           <h3>
-            <a target="_blank" href="Arkisto/NauMedia/PhotosUutiset.github.io/"
-              >NauMedia/Photos Uutiset!</a
+            <a target="_blank" href="Arkisto/NaukuvatUutiset.github.io/"
+              >Naukuvat Uutiset!</a
             >
           </h3>
           <p>
