Edited front-end section

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <div class="h-min-100" id="hero">
       <h1>Niila Vesterinen</h1>
       <p class="hero-p">Joku random lukiolainen, <br />toistaiseksi.</p>
-      <img
+      <!-- <img
         class="hero-photo"
         src="Media/hero-photo.png"
         alt="Random kuva, koska ei oo kuvaa musta xD"
-      />
+      /> -->
     </div>
     <nav id="nav">
       <h2 class="visually-hidden">NAV</h2>
@@ -62,21 +62,39 @@
           <h3>Kotisivuni</h3>
           <p>
             Tämä sivusto kuvaa parhaiten taitojani nettisivujen suunnittelijana
-            ja kehittäjänä. Lue lisää sivun kehityksestä.
+            ja kehittäjänä. Lue lisää sivun kehityksestä.<a
+              target="_blank"
+              href="Sivun-Kehitys/"
+              >Lue lisää sivun kehityksestä.</a
+            >
           </p>
           <h3>
             <a target="_blank" href="Arkisto/NaukuvatUutiset.github.io/"
-              >Naukuvat Uutiset!</a
+              >Chrome selainlaajennukset</a
             >
           </h3>
           <p>
-            Kyseessä on ensimmäinen itse tekemäni nettisivusto. Sivuston
-            tekemisen aikaan en tiennyt mitä tein, joten en suosittele
-            lähdekoodin tarkastelemista.
+            Olen tehnyt myös muutaman selainlaajennuksen chromeen. Ne ovat
+            <a
+              target="_blank"
+              href="https://github.com/Nibazzador/ylefiDarkTheme"
+              >ylefiDarkTheme</a
+            >,
+            <a
+              target="_blank"
+              href="https://github.com/Nibazzador/BlockSocialMedia"
+              >BlockSocialMedia</a
+            >
+            ja
+            <a
+              target="_blank"
+              href="https://github.com/Nibazzador/pesistuloksetDarkTheme"
+              >pesistuloksetDarkTheme</a
+            >. Löydät ne GitHubistani.
           </p>
           <h3><a target="_blank" href="Arkisto/">Arkisto</a></h3>
           <p>
-            Olen tehnyt monia nettisivuja ja muita projekteja. Löydät ne
+            Olen tehnyt (valitettavasti) myös monia nettisivuja. Löydät ne
             <a target="_blank" href="Arkisto/">Arkistostani</a>.
           </p>
         </div>
@@ -518,10 +536,7 @@
         <div class="content">
           <article>
             <h3 class="visually-hidden">Perustietoa</h3>
-            <p class="tmar-8">
-              Kaiken tuon taidoillani flexauksen yrittämisen jälkeen saat kuulla
-              ihan vain minusta:
-            </p>
+            <p class="tmar-8">Lopuksi hieman tietoa minusta:</p>
             <p>Olen 16-vuotias poika Keski-Suomesta.</p>
             <p>
               Pidän luonnosta. Välillä nukun ulkona riippumatossa ilman mitään
