deleted target blank from one link

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </p>
           <h3><a target="_blank" href="Arkisto/">Arkisto</a></h3>
           <p>
-            Olen tehnyt (valitettavasti) myös monia nettisivuja. Löydät ne
+            Olen tehnyt (valitettavasti) myös monia muita nettisivuja. Löydät ne
             <a target="_blank" href="Arkisto/">Arkistostani</a>.
           </p>
         </div>
@@ -108,7 +108,7 @@
             </p>
             <p>
               Alla on joitain lempikuviani, halutessasi voit seurata minua myös
-              <a target="_blank" href="#yhteystiedot">Instagramissa</a>!
+              <a href="#yhteystiedot">Instagramissa</a>!
             </p>
             <div class="photogallery">
               <div
