--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h3>Kotisivuni</h3>
           <p>
             Tämä sivusto kuvaa parhaiten taitojani nettisivujen suunnittelijana
-            ja kehittäjänä. Lue lisää sivun kehityksestä.<a
+            ja kehittäjänä. <a
               target="_blank"
               href="Sivun-Kehitys/"
               >Lue lisää sivun kehityksestä.</a
