Another typo fix

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               >Lue lisää sivun kehityksestä.</a
             >
           </p>
-          <h3>>Chrome selainlaajennukset</h3>
+          <h3>Chrome selainlaajennukset</h3>
           <p>
             Olen tehnyt myös muutaman selainlaajennuksen chromeen. Ne ovat
             <a
