Deleted all references to instagram

--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
           <h3>Kotisivuni</h3>
           <p>
             Tämä sivusto kuvaa parhaiten taitojani nettisivujen suunnittelijana
-            ja kehittäjänä. <a
-              target="_blank"
-              href="Sivun-Kehitys/"
+            ja kehittäjänä.
+            <a target="_blank" href="Sivun-Kehitys/"
               >Lue lisää sivun kehityksestä.</a
             >
           </p>
@@ -106,10 +105,7 @@
               Galaxy A50 puhelimellani. Ja editoin niitä Adobe Photoshop
               Expressillä.
             </p>
-            <p>
-              Alla on joitain lempikuviani, halutessasi voit seurata minua myös
-              <a href="#yhteystiedot">Instagramissa</a>!
-            </p>
+            <p>Alla on joitain lempikuviani.</p>
             <div class="photogallery">
               <div
                 class="img-div"
@@ -520,11 +516,6 @@
             <a href="mailto:vesterinencontact@gmail.com">Email</a>
           </p>
           <p><a href="https://github.com/Nibazzador">GitHub</a></p>
-          <p>
-            <a href="https://www.instagram.com/vesterinen.photography/"
-              >Instagram</a
-            >
-          </p>
         </div>
       </section>
       <section id="mina">
